--- a/style.css
+++ b/style.css
@@ -137,7 +137,7 @@ label.error {
   font-size: 12px;
   color: #000; }
 .img{
-  background-image: url("images/undraw-contact.svg" );
+  background-image: url("undraw-contact.svg" );
   background-repeat:no-repeat;
   background-position: center;
   background-size: contain;
