--- a/style.css
+++ b/style.css
@@ -144,7 +144,7 @@ label.error {
   padding:200px;
 }
 .row{
-  padding:5px;
+  padding:10px;
 }
 .form-control{
   width:70%;
@@ -157,9 +157,9 @@ input::placeholder {
   font-size: 20px;
 }
 textarea{
-  text-align: left;
+  text-align: center;
   margin-top: 5px;
-  padding: 20px;
+  padding: 10px;
   font-size: 20px;
   
 }
@@ -171,20 +171,15 @@ textarea{
 }
 @media screen and (max-width: 1024px){
     .f1 {
-      padding: 10px; 
       display: block;
+      padding: 10px; 
+      
       margin-left: 0em;
   }
-  .col-md-61{
-    display: block;
-    
-  }
-  .col-md-6{
-    display: block;
-  }
   .form-control{
-    width:110%;
-    height: 50px;
+    width:100%;
+    padding: 15px;
+    height: 30px;
     border-radius: 10px;
   
   }
@@ -192,4 +187,22 @@ textarea{
     float: right;
     border-radius: 15px !important; 
       padding: 17px; }
+
+  .col-md-61{
+    display: block;
+    padding:10px;
+    margin-top: 1em;
+    
+  }
+  .col-md-6{
+   padding: 5px;
+  }
+  .col-md-12{
+    padding:5px;
+    border-radius: 20px;
+  
+  }
+  .img{
+    padding: 150px;
+  }
 }
