--- a/home.css
+++ b/home.css
@@ -133,7 +133,7 @@
 .products {
   z-index: 2;
   width: 100%;
-  background-color: rgba(80, 71, 71, 0.774);
+  background-color: rgb(80, 71, 71);
   align-items: center;
   text-align: center;
   padding: 22px;
@@ -200,7 +200,7 @@ img {vertical-align: middle;}
   width: 100%;
   height: 100%;
   background-size: cover;
-  background-color: rgba(133, 121, 121, 0.774);
+  background-color: rgb(133, 121, 121);
   z-index: 1;
   padding:20px;
   overflow-x: hidden;
@@ -340,7 +340,7 @@ img {vertical-align: middle;}
   box-sizing: border-box;
   justify-content:space-between;
   width: 100%;
-  background-color: rgba(80, 71, 71, 0.774);
+  background-color: rgb(80, 71, 71);
   align-items: center;
   text-align: center;
   padding: 25px;
@@ -379,7 +379,7 @@ img {vertical-align: middle;}
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: rgba(133, 121, 121, 0.774);
+  background-color: rgb(133, 121, 121);
 }
 .text1{
   flex-basis: 50%;
@@ -597,7 +597,7 @@ position: relative;
   font-size: 1rem;;
 }
 .mySlides h1{
-  font-size: 20px;
+  font-size: 22px;
   top: 10%;
   left: 10%;
 }
