--- a/home.css
+++ b/home.css
@@ -133,10 +133,11 @@
 .products {
   z-index: 2;
   width: 100%;
+  height: 100%;
   background-color: rgb(80, 71, 71);
   align-items: center;
   text-align: center;
-  padding: 22px;
+  padding: 10px;
   
 }
 .abimg{
@@ -271,8 +272,8 @@ img {vertical-align: middle;}
    padding:400px;
    width: 100%;
   height: 100%;
-  padding-bottom: 100px;
   border-radius:20px;
+  padding-bottom: 100px;
 }
 .imgp2{
   z-index: -1;
@@ -285,7 +286,7 @@ img {vertical-align: middle;}
    padding-bottom: 100px;
    width: 100%;
   height: 100%;
-  border-radius:20px;
+border-radius:20px;
 }
 .imgp3{
   z-index: -1;
@@ -298,7 +299,7 @@ img {vertical-align: middle;}
    width: 100%;
   height: 100%;
    padding-bottom: 100px;
-  border-radius:20px;
+   border-radius:20px;
 }
 .imgp4{
   z-index: -1;
@@ -311,7 +312,7 @@ img {vertical-align: middle;}
    width: 100%;
   height: 100%;
    padding-bottom: 100px;
-  border-radius:20px;
+border-radius:20px;
 }
 .imgp5{
   z-index: -1;
@@ -324,7 +325,7 @@ img {vertical-align: middle;}
    width: 100%;
   height: 100%;
    padding-bottom: 100px;
-  border-radius:20px;
+border-radius:20px;
 }
 .imgp5 h1,.imgp4 h1,.imgp3 h1,.imgp2 h1,.imgp1 h1{
   z-index: 3;
@@ -342,22 +343,22 @@ img {vertical-align: middle;}
   z-index: 2;
   box-sizing: border-box;
   width: 100%;
+  height: 100%;
   background-color: rgb(80, 71, 71);
   align-items: center;
   text-align: center;
-  padding: 20px;
+  padding: 25px;
 }
 
 .gif1{
   z-index: 3;
   background-image: url("11.gif");
-   background-size: cover;
+   background-size: contain;
    background-repeat:no-repeat;
-   background-size:cover;
    background-position: center;
    margin:0; /* If you want no margin */
     /*if your want to padding */
-padding: 390px;
+  padding: 370px;
     border-radius: 20px;
 
 }
@@ -452,24 +453,13 @@ padding: 390px;
   .lg{
     padding:30px;
   }
- 
   .text a,.showcase header{
     font-size: 1rem;
   }
   .products h1{
     font-size: 33px;
   }
- .gif{
-    padding: 10px;
-  }
   
-  .gif1{
-     margin:0; /* If you want no margin */
-      /*if your want to padding */
-      padding: 290px;
-      border-radius: 10px;
-  
-  }
   .slideshow-container{
     padding:10px;
     
@@ -477,8 +467,13 @@ padding: 390px;
   .imgp1,.imgp2,.imgp3,.imgp4,.imgp5{
     padding:150px;
   }
+  .products{
+    padding:30px;
+  }
   .abimg{
-    padding:170px;
+    margin-top: 20px;
+    padding:180px;
+    height: auto;
     
 }
 @-webkit-keyframes fadeInRight{
@@ -593,5 +588,21 @@ position: relative;
   font-size: 22px;
   top: 10%;
   left: 10%;
+}
+.gif{
+  width: 100%;
+  height: 50%;
+  padding: 10px;
+}
+
+.gif1{
+   margin:0; /* If you want no margin */
+    /*if your want to padding */
+  padding-top: 200px;
+  padding-bottom: 100px;
+  padding-left: 200px;
+  padding-right: 100px;
+  background-position:10%;
+
 }
 }
