--- a/home.css
+++ b/home.css
@@ -9,6 +9,54 @@
   font-family: "Titillium Web", sans-serif;
   scroll-behavior: smooth;
 }
+.spinner-wrapper{
+  width: 100%;
+  height: 100%;
+  background-color: #151515;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 9999;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.spinner {
+  position: relative;
+  width: 8rem;
+  height: 8rem;
+  border-radius: 50%;
+}
+
+.spinner::before,
+.spinner:after{
+  content: "";
+  position: absolute;
+  border-radius: 50%;
+}
+
+.spinner:before {
+  width: 100%;
+  height: 100%;
+  background-image:linear-gradient(90deg, #ff00cc 0%,#333399 100% );
+  animation: spin .5s infinite linear;
+}
+.spinner:after {
+  width: 90%;
+  height: 90%;
+  background-color: #151515;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+@keyframes spin {
+  to {
+      transform: rotate(360deg);
+  }
+
+}
 
 .lg{
   background-image: url( "lg.png" );
@@ -42,6 +90,7 @@
   position: fixed;
   top: 0;
   left: 0;
+  transform: scaleY(2);
 }
 
 .showcase {
@@ -133,7 +182,7 @@
 .products {
   z-index: 2;
   width: 100%;
-  height: 104%;
+  height: 100%;
   background-color: rgb(80, 71, 71);
   align-items: center;
   text-align: center;
@@ -146,7 +195,7 @@
   background-repeat:no-repeat;
   background-position: center;
   background-size: contain;
-  padding:310px;
+  padding:320px;
 }
 .products h1 {
   font-family: adobe-Garamond-pro;
@@ -343,7 +392,7 @@ border-radius:20px;
   z-index: 2;
   box-sizing: border-box;
   width: 100%;
-  height: 104%;
+  height: 100%;
   background-color: rgb(80, 71, 71);
   align-items: center;
   text-align: center;
@@ -358,7 +407,7 @@ border-radius:20px;
    background-position: center;
    margin:0; /* If you want no margin */
     /*if your want to padding */
-  padding: 360px;
+  padding: 370px;
     border-radius: 20px;
 
 }
@@ -473,7 +522,7 @@ border-radius:20px;
   .abimg{
     margin-top: 20px;
     padding:180px;
-    height: 100%;
+    height: auto;
     
 }
 @-webkit-keyframes fadeInRight{
