--- a/home.css
+++ b/home.css
@@ -1,152 +1,667 @@
+/*! FONTS */
+@import url("https://fonts.googleapis.com/css2?family=Titillium+Web:wght@400;700&display=swap");
 
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <link rel="shortcut icon" href="lg.png" type="image/x-icon" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Kabir Leathers</title>
-    <link rel="stylesheet" href="home.css" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  </head>
-  <body>
-  <div class='spinner-wrapper'>
-    <div class="spinner"></div>
-</div>
-    <section class="showcase">
-    
-      <header class="header">
-      <div class="text">
-        <a href="contact.html">Contact Us</a>
-      </div>
-        <div class="lg"></div>
-        <h1>Kabir Leathers</h1>
-        
-      </header>
-      
-      <video class="bg" id="bg1" autoplay loop >
-      <source src="bg.mp4" type="video/mp4"> 
-      </video>
-      <a href="#sld" class="scroll-down">
-        <div class="mouse">
-          <span></span>
-        </div>
-        <div class="arrow">
-          <span></span>
-        </div>
-      </a>
-    </section>
-  <div class="slideshow-container" id="sld">
-    <div class="mySlides fade">
-    
-    <div class="imgp1"><h1>Innovative Product Development</h1></div>
-  </div>
-
-  <div class="mySlides fade">
-    <div class="imgp2"><h1>Global sourcing Of leathers</h1></div>
-  </div>
-
-  <div class="mySlides fade">
-  
-    <div class="imgp3"><h1>Efficent Production</h1></div>
-  </div>
-
-  <div class="mySlides fade">
-  
-    <div class="imgp4"><h1>Competitive Prices</h1></div>
-  </div>
-  <div class="mySlides fade">
-
-    <div class="imgp5"><h1>Environmentally Cautious</h1></div>
-  </div>
-
-  <div style="text-align:center">
-  <span class="dot" onclick="currentSlide(1)"></span>
-  <span class="dot" onclick="currentSlide(2)"></span>
-  <span class="dot" onclick="currentSlide(3)"></span>
-   <span class="dot" onclick="currentSlide(4)"></span>
-    <span class="dot" onclick="currentSlide(5)"></span>
-</div>
-  </div>
-  <div class="gif">
-    <div class="gif1"></div>  
-  </div>
-    <div class="products" id="Products">
-      <h1>Celebrating 25 Years</h1>
-      <div class="images">
-        <div class="product-img">
-       <div class="abimg">
-       <p>Kabir Leathers isn't just any leading business in producing leather goods, its an amalgamation of craft, effort and progress.
-      Transforming ideas to producing efficiently, this fresh contemporary elixir of a world of 
-      genuine leather products doesn't experiment with the ephemeral, it creates products with global sourcing 
-      of leather and trims that would last years .<br><br><br>
-      Driven by the urge to explore, we promise quality products with competitive prices.
-      For us, its never about being sustainable, but to be on this journey filled with experience and expertise, being environmentally cautious.
-       </p>
-       </div>
-
-        </div>
-        
-        </div>
-      </div>
-    </div>
-    </div>
-
-  <div class="showcase1">
-  <div class="mat">
-  <h2>Find us on</h2><a href="#" ><svg xmlns="http://www.w3.org/2000/svg" width="56" height="56" fill="black" class="bi bi-google" viewBox="0 0 16 16">
-  <path d="M15.545 6.558a9.42 9.42 0 0 1 .139 1.626c0 2.434-.87 4.492-2.384 5.885h.002C11.978 15.292 10.158 16 8 16A8 8 0 1 1 8 0a7.689 7.689 0 0 1 5.352 2.082l-2.284 2.284A4.347 4.347 0 0 0 8 3.166c-2.087 0-3.86 1.408-4.492 3.304a4.792 4.792 0 0 0 0 3.063h.003c.635 1.893 2.405 3.301 4.492 3.301 1.078 0 2.004-.276 2.722-.764h-.003a3.702 3.702 0 0 0 1.599-2.431H8v-3.08h7.545z"></path>
-</svg></a>
-<h2>Plot no.- 17 
-Sector-6 Manesar, Gurgaon, Haryana</h2>
-<h3>+919999999999</h3>
-</div>
-<div class="text1">
-        <a href="contact.html">Contact Us</a>
-      </div>
-</div> 
-</div><script>
-  
-        const video = document.getElementById("bg1");
-        // const top = document.getElementById("showcase");
-        document.body.addEventListener("mouseenter", (e) => {
-            video.play();
-        });
-        document.body.addEventListener("mouseleave", (e) => {
-        });
-    
-</script>
-    <script>
-    
-var slideIndex = 0;
-showSlides();
-
-function showSlides() {
-  var i;
-  var slides = document.getElementsByClassName("mySlides");
-  var dots = document.getElementsByClassName("dot");
-  for (i = 0; i < slides.length; i++) {
-    slides[i].style.display = "none";  
-  }
-  slideIndex++;
-  if (slideIndex > slides.length) {slideIndex = 1}    
-  for (i = 0; i < dots.length; i++) {
-    dots[i].className = dots[i].className.replace(" active", "");
-  }
-  slides[slideIndex-1].style.display = "block";  
-  dots[slideIndex-1].className += " active";
-  setTimeout(showSlides, 2000); // Change image every 2 seconds
+/* ! */
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Titillium Web", sans-serif;
+  scroll-behavior: smooth;
 }
-</script>
-<script>
-    let spinnerWrapper = document.querySelector('.spinner-wrapper');
+.spinner-wrapper{
+  width: 100%;
+  height: 100%;
+  background-color: #151515;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 9999;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
 
-    window.addEventListener('load', function () {
-        // spinnerWrapper.style.display = 'none';
-        setTimeout(function(){ spinnerWrapper.parentElement.removeChild(spinnerWrapper);}, 4000);
-        
-    });
-</script>
+.spinner {
+  position: relative;
+  width: 8rem;
+  height: 8rem;
+  border-radius: 50%;
+}
 
-  </body>
-</html>
+.spinner::before,
+.spinner:after{
+  content: "";
+  position: absolute;
+  border-radius: 50%;
+}
+
+.spinner:before {
+  width: 100%;
+  height: 100%;
+  background-image:linear-gradient(90deg, #ff00cc 0%,#333399 100% );
+  animation: spin .5s infinite linear;
+}
+.spinner:after {
+  width: 90%;
+  height: 90%;
+  background-color: #151515;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+@keyframes spin {
+  to {
+      transform: rotate(360deg);
+  }
+
+}
+
+.lg{
+  background-image: url( "lg.png" );
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: contain;
+    opacity: 1;
+    cursor: default;
+    padding:60px;
+    background-color: rgba(255, 255, 255, 0);
+    border-bottom-color: rgba(112, 112, 112, 1);
+    border-bottom-style: none;
+    border-bottom-width: 1.00px;
+    border-left-color: rgba(112, 112, 112, 1);
+    border-left-style: none;
+    border-left-width: 1.00px;
+    border-right-color: rgba(112, 112, 112, 1);
+    border-right-style: none;
+    border-right-width: 1.00px;
+    border-top-color: rgba(112, 112, 112, 1);
+    border-top-style: none;
+    border-top-width: 1.00px;
+    height: 10%;
+    width: 5%;
+}
+.bg {
+  z-index: -1;
+  object-fit: cover;
+  width: 100vw;
+  height: 100vh;
+  position: fixed;
+  top: 0;
+  left: 0;
+}
+
+.showcase {
+  right: 0;
+  width: 100%;
+  min-height: 100vh;
+  z-index: 2;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.showcase header {
+  position: absolute;
+  top: 0;
+  left: 0px;
+  width: 100%;
+  padding: 30px;
+  z-index: 1;
+  font-size: 1.8rem;
+  color: #1b1919f6;
+}
+
+
+.text {
+  float: right;
+  margin-top: 0px;
+}
+
+.text a {
+  display: inline-block;
+  font-size: 1.8rem;
+  background-color: #fff;
+  padding: 10px 30px;
+  text-decoration: none;
+  margin-top: 10px;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  transition: 0.2s;
+  border-radius: 25px;
+  color: #222;
+}
+
+.text a:hover {
+  letter-spacing: 3px;
+}
+
+.scroll-down {
+  position: absolute;
+  bottom: 3rem;
+  left: 80%;
+  transform: translateX(-50%);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.mouse {
+  width: 3rem;
+  height: 5rem;
+  border: 2px solid #fff;
+  border-radius: 2rem;
+  margin-bottom: 0.5rem;
+  display: flex;
+}
+
+.mouse span {
+  width: 0.5rem;
+  height: 0.5rem;
+  background-color: #fff;
+  display: block;
+  border-radius: 50%;
+  margin: auto;
+  animation: move-wheel 1s linear infinite;
+}
+
+.arrow span {
+  display: block;
+  width: 0.7rem;
+  height: 0.7rem;
+  border: 2px solid transparent;
+  border-right-color: #fff;
+  border-bottom-color: #fff;
+  transform: rotate(45deg);
+  animation: arrow-down 1s alternate infinite;
+}
+
+.products {
+  z-index: 2;
+  width: 100%;
+  height: 100%;
+  background-color: rgb(133, 121, 121);
+  align-items: center;
+  text-align: center;
+  padding: 10px;
+  padding-left: 100px;
+  padding-right: 100px;
+  
+}
+.abimg{
+  padding:10px;
+  margin-top: 20px;
+  color:white;
+  font: bold 30px "Helvetica Neue", Helvetica, Arial, sans-serif;
+  display: table-cell;
+  vertical-align: middle;
+  
+}
+.products h1 {
+  font-family: adobe-Garamond-pro;
+  font-size: 78px;
+  color: 	rgb(187, 194, 204)
+}
+
+.images {
+  padding-top: 20px;
+}
+.product-img {
+  margin-top: 10px;
+  align-items: center;
+  text-align: center;
+  padding:10px;
+  
+}
+.product-img:hover{ 
+  transition: 0.6s ease;
+  box-shadow: 0px 0px 12px 3px rgb(12, 12, 12);
+  
+}
+
+.products a {
+  display: inline-block;
+  font-size: 1rem;
+  background-color: #fff;
+  padding: 10px 30px;
+  text-decoration: none;
+  color: #111;
+  margin-top: 50px;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  transition: 0.2s;
+  border-radius: 25px;
+  color: #222;
+}
+
+.products a:hover {
+  letter-spacing: 3px;
+}
+.mySlides {display: none;}
+img {vertical-align: middle;}
+
+
+/* Slideshow container */
+.slideshow-container {
+  z-index: -1;
+  box-sizing:border-box;
+  width: 100%;
+  height: 100%;
+  background-size: cover;
+  background-color: rgb(133, 121, 121);
+  z-index: 1;
+  padding:20px;
+  overflow-x: hidden;
+  overflow-y:hidden ;
+}
+
+
+/* The dots/bullets/indicators */
+.dot {
+  margin-top: 50px;
+  cursor: pointer;
+  padding:10px;
+  background-color: #bbb;
+  border-radius: 50%;
+  display: inline-block;
+  transition: background-color 0.6s ease;
+}
+
+.active, .dot:hover {
+  background-color: #664141;
+}
+
+/* Fading animation */
+.fade {
+  -webkit-animation-name: fadeInRight;
+  -webkit-animation-duration: 1.2s;
+  animation-name: fadeInRight;
+  animation-duration: 1.2s;
+}
+
+@-webkit-keyframes fadeInRight{
+  0%{
+      opacity:0;
+      -webkit-transform:translateX(100px);
+      transform:translateX(100px)
+  }
+  100%{
+      opacity:1;
+      -webkit-transform:translateX(0);
+      transform:translateX(0)
+  }
+}
+@keyframes fadeInRight{
+  0%{
+      opacity:0;
+      -webkit-transform:translateX(100px);
+      -ms-transform:translateX(100px);
+      transform:translateX(100px)
+  }
+  100%{
+      opacity:1;
+      -webkit-transform:translateX(0px);
+      -ms-transform:translateX(0px);
+      transform:translateX(0px)
+  }
+}
+.fadeInRight{
+  -webkit-animation-name:fadeInRight;
+  animation-name:fadeInRight
+}
+.imgp1{
+  z-index: -1;
+  background-image: url("p1.jpg");
+  background-size: cover;
+   background-repeat:no-repeat;
+   display: block;
+   background-position: center;
+   padding:320px;
+   width: 100%;
+  height: 96%;
+  border-radius:20px;
+  padding-bottom: 50px;
+}
+.imgp2{
+  z-index: -1;
+  background-image: url("p2.jpg");
+  background-size: cover;
+   background-repeat:no-repeat;
+   display: block;
+   background-position: center;
+   padding:320px;
+   padding-bottom: 50px;
+   width: 100%;
+   height: 96%;
+border-radius:20px;
+}
+.imgp3{
+  z-index: -1;
+  background-image: url("p3.jpg");
+  background-size: cover;
+   background-repeat:no-repeat;
+   display: block;
+   background-position: center;
+   padding:320px;
+   width: 100%;
+   height: 96%;
+  padding-bottom: 50px;
+   border-radius:20px;
+}
+.imgp4{
+  z-index: -1;
+  background-image: url("p4.jpg");
+  background-size: cover;
+   background-repeat:no-repeat;
+   display: block;
+   background-position: center;
+   padding:320px;
+   width: 100%;
+   height: 96%;
+  padding-bottom: 50px;
+border-radius:20px;
+}
+.imgp5{
+  z-index: -1;
+  background-image: url("p5.jpg");
+  background-size: cover;
+   background-repeat:no-repeat;
+   display: block;
+   background-position: center;
+   padding:320px;
+   width: 100%;
+   height: 96%;
+  padding-bottom: 50px;
+border-radius:20px;
+}
+.imgp5 h1,.imgp4 h1,.imgp3 h1,.imgp2 h1,.imgp1 h1{
+  z-index: 3;
+  top: 40%;
+  left: 50%;
+  color:white;
+  font:HELVETICA;
+  font-size:80px;
+}
+
+
+
+.gif{
+  align-items: center;
+  z-index: 2;
+  box-sizing: border-box;
+  width: 100%;
+  height: 104%;
+  background-color: rgb(80, 71, 71);
+  align-items: center;
+  text-align: center;
+  padding: 25px;
+}
+
+.gif1{
+  z-index: 3;
+  background-image: url("11.gif");
+   background-size: contain;
+   background-repeat:no-repeat;
+   background-position: center;
+   margin:0; /* If you want no margin */
+    /*if your want to padding */
+  padding: 350px;
+    border-radius: 20px;
+
+}
+
+.showcase1{
+  right: 0;
+  padding:10px;
+  z-index: 2;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: rgb(80, 71, 71);;
+}
+.text1{
+  flex-basis: 50%;
+  float: right;
+  display: block;
+}
+.mat{
+  flex-basis: 50%;
+  display: block;
+  padding: 15px;
+}
+
+.text1 a {
+  display: inline-block;
+  font-size: 1.8rem;
+  background-color: #fff;
+  padding: 20px;
+  text-decoration: none;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  transition: 0.2s;
+  border-radius: 25px;
+  color: #222;
+}
+
+
+.text1 a:hover {
+  letter-spacing: 3px;
+}
+
+@-webkit-keyframes fade {
+  from {opacity: .4} 
+  to {opacity: 1}
+}
+
+@keyframes fade {
+  from {opacity: .4} 
+  to {opacity: 1}
+}
+
+/* On smaller screens, decrease text size */
+@media only screen and (max-width: 300px) {
+  .text {font-size: 11px}
+}
+
+
+/* Keyframes and media queries */
+/* Always keep these at last */
+
+@keyframes move-wheel {
+  0% {
+    opacity: 0;
+    transform: translateY(-1rem);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(1rem);
+  }
+}
+
+@keyframes arrow-down {
+  0% {
+    opacity: 0;
+  }
+  25% {
+    opacity: 0.25;
+  }
+  50% {
+    opacity: 0.5;
+  }
+  75% {
+    opacity: 0.75;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+@media screen and (max-width: 1024px) {
+  .lg{
+    padding:30px;
+  }
+  .text a,.showcase header{
+    font-size: 1rem;
+  }
+  .products h1{
+    font-size: 33px;
+  }
+  
+  .slideshow-container{
+    padding:10px;
+    
+  }
+  .imgp1,.imgp2,.imgp3,.imgp4,.imgp5{
+    padding:150px;
+    width: 100%;
+    height: 100%;
+  }
+  .products{
+    padding:30px;
+  }
+  .abimg{
+    margin-top: 10px;
+    padding:5px;
+    height: auto;
+    
+}
+.abimg p{
+  margin-top: 10px;
+  font-size: 16px;
+  
+}
+.images {
+  padding-top: 10px;
+}
+@-webkit-keyframes fadeInRight{
+  0%{
+      opacity:0;
+      -webkit-transform:translateX(0px);
+      transform:translateX(0px)
+  }
+  100%{
+      opacity:1;
+      -webkit-transform:translateX(0);
+      transform:translateX(0)
+  }
+}
+@keyframes fadeInRight{
+  0%{
+      opacity:0;
+      -webkit-transform:translateX(0px);
+      -ms-transform:translateX(0px);
+      transform:translateX(0px)
+  }
+  100%{
+      opacity:1;
+      -webkit-transform:translateX(0px);
+      -ms-transform:translateX(0px);
+      transform:translateX(0px)
+  }
+}
+.slideshow-container {
+  padding:10px;
+}.bg{
+object-fit: contain;
+position: relative;
+
+}
+.header{
+  padding:10px;
+}
+.text a {
+  display: inline-block;
+  font-size: 1rem;
+  background-color: rgb(199, 164, 164);
+  padding: 10px;
+  text-decoration: none;
+  margin-top: 10px;
+  text-transform: uppercase;
+  letter-spacing: 1.2px;
+  transition: 0.2s;
+  border-radius: 25px;
+  color: #222;
+}
+
+.scroll-down {
+  position: absolute;
+  bottom: 3rem;
+  left: 50%;
+  transform: translateX(-50%);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.mouse {
+  width: 2rem;
+  height: 3rem;
+  border: 2px solid  rgb(199, 164, 164);
+  border-radius: 2rem;
+  margin-bottom: 0.5rem;
+  display: flex;
+}
+
+.mouse span {
+  width: 0.5rem;
+  height: 0.5rem;
+  background-color:  rgb(199, 164, 164);
+  display: block;
+  border-radius: 50%;
+  margin: auto;
+  animation: move-wheel 1s linear infinite;
+}
+
+.arrow span {
+  display: block;
+  width: 0.7rem;
+  height: 0.7rem;
+  border: 2px solid transparent;
+  border-right-color:  rgb(199, 164, 164);
+  border-bottom-color :rgb(199, 164, 164);
+  transform: rotate(45deg);
+  animation: arrow-down 1s alternate infinite;
+}
+.map{
+  padding: 0;
+}
+.formout{
+  display: block;
+}
+.slideshow-container{
+  height: 50%;
+}
+.map h2{
+  font-size:23px ;
+}
+.text1 a{
+  font-size: 1rem;
+  padding:10px;
+}
+.mat h2{
+  font-size: 1rem;;
+}
+.mySlides h1{
+  font-size: 22px;
+  top: 10%;
+  left: 10%;
+}
+.gif{
+  width: 100%;
+  height: 50%;
+  padding: 10px;
+}
+
+.gif1{
+   margin:0; /* If you want no margin */
+    /*if your want to padding */
+  padding-top: 200px;
+  padding-bottom: 100px;
+  padding-left: 200px;
+  padding-right: 100px;
+  background-position:10%;
+
+}
+}
