--- a/home.css
+++ b/home.css
@@ -194,7 +194,7 @@
   padding:10px;
   margin-top: 20px;
   color:white;
-  font: bold 30px "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font: 30px "Helvetica Neue", Helvetica, Arial, sans-serif;
   display: table-cell;
   vertical-align: middle;
   
