--- a/home.css
+++ b/home.css
@@ -1,12 +1,13 @@
 /*! FONTS */
 @import url("https://fonts.googleapis.com/css2?family=Titillium+Web:wght@400;700&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital@1&display=swap');
 
 /* ! */
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: "Titillium Web", sans-serif;
+  font-family: "Titillium Web",'Montserrat',"adobe-gothic-std", sans-serif;
   scroll-behavior: smooth;
 }
 .spinner-wrapper{
@@ -111,7 +112,7 @@
   padding: 30px;
   z-index: 1;
   font-size: 1.8rem;
-  color: #1b1919f6;
+  color: #cac1b4;
 }
 
 
@@ -177,27 +178,42 @@
   transform: rotate(45deg);
   animation: arrow-down 1s alternate infinite;
 }
-
+.con{
+  z-index: 1;
+  padding-top:50px;
+  padding-right:100px;
+  padding-left: 100px;
+  height: 100%;
+  background-color: #fdfdfd;
+  
+}
 .products {
   z-index: 2;
-  width: 100%;
-  height: 100%;
-  background-color: rgb(133, 121, 121);
+  background: linear-gradient(
+    to right, 
+    #cac1b4 0%, 
+    #cac1b4 50%, 
+    #ffffff 50%, 
+    #ffffff 100%
+  );
   align-items: center;
   text-align: center;
   padding: 10px;
   padding-left: 100px;
   padding-right: 100px;
+  box-shadow: 0px 0px 12px 3px rgb(12, 12, 12);
+  
   
 }
+
 .abimg{
   padding:10px;
   margin-top: 20px;
-  color:white;
-  font: 30px "Helvetica Neue", Helvetica, Arial, sans-serif;
+  color:rgb(8, 1, 1);
+  font-size: 30px ;
+  font-family: 'Montserrat';
   display: table-cell;
   vertical-align: middle;
-  
 }
 .products h1 {
   font-family: adobe-Garamond-pro;
@@ -206,22 +222,9 @@
     top: 10%; 
     left: 50%;
     text-transform: uppercase;
-    font-family: verdana;
-    color: #f5f5f5;
-    text-shadow: 1px 1px 1px #919191,
-        1px 2px 1px #919191,
-        1px 3px 1px #919191,
-        1px 4px 1px #919191,
-        1px 5px 1px #919191,
-        1px 6px 1px #919191,
-        1px 7px 1px #919191,
-        1px 8px 1px #919191,
-        1px 9px 1px #919191,
-        1px 10px 1px #919191,
-    1px 18px 6px rgba(16,16,16,0.4),
-    1px 22px 10px rgba(16,16,16,0.2),
-    1px 25px 35px rgba(16,16,16,0.2),
-    1px 30px 60px rgba(16,16,16,0.4);
+    font-family: monospace;
+    color:rgb(34, 27, 27);
+    font-family:"adobe-gothic-std";
 }
 
 .images {
@@ -234,11 +237,7 @@
   padding:10px;
   
 }
-.product-img:hover{ 
-  transition: 0.6s ease;
-  box-shadow: 0px 0px 12px 3px rgb(12, 12, 12);
-  
-}
+
 
 .products a {
   display: inline-block;
@@ -251,7 +250,7 @@
   text-transform: uppercase;
   letter-spacing: 2px;
   transition: 0.2s;
-  border-radius: 25px;
+  
   color: #222;
 }
 
@@ -269,27 +268,19 @@ img {vertical-align: middle;}
   width: 100%;
   height: 100%;
   background-size: cover;
-  background-color: rgb(133, 121, 121);
+  background: linear-gradient(
+    to right, 
+    #ffffff 0%, 
+    #ffffff 50%,
+    #cac1b4 50%, 
+    #cac1b4 100%
+  );
   z-index: 1;
-  padding:10px;
+  padding:60px;
+  padding-top: 15px;
+  padding-right: 50px;
   overflow-x: hidden;
   overflow-y:hidden ;
-}
-
-
-/* The dots/bullets/indicators */
-.dot {
-  margin-top: 50px;
-  cursor: pointer;
-  padding:10px;
-  background-color: #bbb;
-  border-radius: 50%;
-  display: inline-block;
-  transition: background-color 0.6s ease;
-}
-
-.active, .dot:hover {
-  background-color: #664141;
 }
 
 /* Fading animation */
@@ -300,35 +291,56 @@ img {vertical-align: middle;}
   animation-duration: 1.2s;
 }
 
-@-webkit-keyframes fadeInRight{
-  0%{
-      opacity:0;
-      -webkit-transform:translateX(100px);
-      transform:translateX(100px)
-  }
-  100%{
-      opacity:1;
-      -webkit-transform:translateX(0);
-      transform:translateX(0)
-  }
+.w3-button:hover {
+  color: #000!important;
+  background-color: #ccc!important;
 }
-@keyframes fadeInRight{
-  0%{
-      opacity:0;
-      -webkit-transform:translateX(100px);
-      -ms-transform:translateX(100px);
-      transform:translateX(100px)
-  }
-  100%{
-      opacity:1;
-      -webkit-transform:translateX(0px);
-      -ms-transform:translateX(0px);
-      transform:translateX(0px)
-  }
+
+.w3-black, .w3-hover-black:hover {
+  color: #fff!important;
+  background-color: #000!important;
 }
+.w3-btn, .w3-button {
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+.w3-btn, .w3-button {
+  border: none;
+  display: inline-block;
+  padding: 14px;
+  margin-top: 10px;
+  
+  overflow: hidden;
+  text-decoration: none;
+  color: inherit;
+  background-color: inherit;
+  text-align: center;
+  cursor: pointer;
+  white-space: nowrap;
+  border-radius: 20px;
+  z-index: 5;
+  
+}
+#l1{
+  margin-left: 45%;
+}
+#l2{
+  margin-left: 10px;
+}
+button, [type=button], [type=reset], [type=submit] {
+  -webkit-appearance: button;
+}
+
 .fadeInRight{
-  -webkit-animation-name:fadeInRight;
-  animation-name:fadeInRight
+  animation-name: slide;
+  animation-duration: 10s;
+  animation-direction: normal;
+  animation-timing-function: ease;
+   animation-iteration-count: infinite;
 }
 .imgp1{
   z-index: -1;
@@ -337,11 +349,11 @@ img {vertical-align: middle;}
    background-repeat:no-repeat;
    display: block;
    background-position: center;
-   padding:320px;
+   padding:300px;
    width: 100%;
   height: 100%;
-  border-radius:20px;
   padding-bottom: 50px;
+  box-shadow: 0px 0px 12px 3px rgb(12, 12, 12);
 }
 .imgp2{
   z-index: -1;
@@ -350,11 +362,11 @@ img {vertical-align: middle;}
    background-repeat:no-repeat;
    display: block;
    background-position: center;
-   padding:320px;
+   padding:300px;
    padding-bottom: 50px;
    width: 100%;
    height: 100%;
-border-radius:20px;
+box-shadow: 0px 0px 12px 3px rgb(12, 12, 12);
 }
 .imgp3{
   z-index: -1;
@@ -363,11 +375,11 @@ border-radius:20px;
    background-repeat:no-repeat;
    display: block;
    background-position: center;
-   padding:320px;
+   padding:300px;
    width: 100%;
    height: 100%;
   padding-bottom: 50px;
-   border-radius:20px;
+   box-shadow: 0px 0px 12px 3px rgb(12, 12, 12);
 }
 .imgp4{
   z-index: -1;
@@ -376,31 +388,37 @@ border-radius:20px;
    background-repeat:no-repeat;
    display: block;
    background-position: center;
-   padding:320px;
+   padding:300px;
    width: 100%;
    height: 100%;
   padding-bottom: 50px;
-border-radius:20px;
+box-shadow: 0px 0px 12px 3px rgb(12, 12, 12);
 }
 .imgp5{
   z-index: -1;
   background-image: url("p5.jpg");
-  background-size: cover;
+  background-size:cover;
    background-repeat:no-repeat;
    display: block;
-   padding:320px;
+   padding:300px;
+   background-position: center;
    width: 100%;
    height: 100%;
   padding-bottom: 50px;
-border-radius:20px;
+box-shadow: 0px 0px 12px 3px rgb(12, 12, 12);
 }
 .imgp5 h1,.imgp4 h1,.imgp3 h1,.imgp2 h1,.imgp1 h1{
   z-index: 3;
-  top: 40%;
-  left: 50%;
+  top: 80%;
+  left: 10%;
   color:white;
-  font:HELVETICA;
-  font-size:80px;
+  font-family:"HELVETICA";
+  font-size:60px;
+  margin-top: 1em;
+}
+.imgp5 h1{
+  margin-top: 2em;
+  margin-left: 1.5em;
 }
 
 
@@ -410,11 +428,22 @@ border-radius:20px;
   z-index: 2;
   box-sizing: border-box;
   width: 100%;
-  height: 104%;
-  background-color: rgb(80, 71, 71);
+  height: 100%;
+  padding:44px;
+  padding-left: 200px;
+  padding-right: 200px;
+  background: linear-gradient(
+    to right, 
+    #ffffff 0%,
+    #ffffff 20%,  
+    #cac1b4 20%, 
+    #cac1b4 50%, 
+    #ffffff 50%, 
+    #ffffff 100%
+  );
   align-items: center;
   text-align: center;
-  padding: 25px;
+  
 }
 
 .gif1{
@@ -425,8 +454,9 @@ border-radius:20px;
    background-position: center;
    margin:0; /* If you want no margin */
     /*if your want to padding */
-  padding: 350px;
-    border-radius: 20px;
+    height: 100%;
+    width: 100%;
+    box-shadow: 0px 0px 12px 3px rgb(12, 12, 12);
 
 }
 
@@ -437,7 +467,7 @@ border-radius:20px;
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: rgb(80, 71, 71);;
+  background-color: rgb(248, 247, 247);;
 }
 .text1{
   flex-basis: 50%;
@@ -452,12 +482,13 @@ border-radius:20px;
 
 .text1 a {
   display: inline-block;
-  font-size: 1.8rem;
-  background-color: #fff;
+  font-size: 1.6rem;
+  background-color: #cac1b4;
   padding: 20px;
   text-decoration: none;
+  margin-left: 70%;
   text-transform: uppercase;
-  letter-spacing: 2px;
+  letter-spacing: 1.2px;
   transition: 0.2s;
   border-radius: 25px;
   color: #222;
@@ -468,14 +499,28 @@ border-radius:20px;
   letter-spacing: 3px;
 }
 
-@-webkit-keyframes fade {
-  from {opacity: .4} 
-  to {opacity: 1}
-}
-
-@keyframes fade {
-  from {opacity: .4} 
-  to {opacity: 1}
+@keyframes slide {
+  0% {
+    background-position: 0 0;
+  }
+  16.66% {
+    background-position: 0 0;
+  }
+  33.32% {
+    background-position: -800px 0;
+  }
+  49.98% {
+    background-position: -800px 0;
+  }
+  66.64% {
+    background-position: -1600px 0;
+  }
+  83.30% {
+    background-position: -1600px 0;
+  }
+  100% {
+    background-position: 0 0;
+  }
 }
 
 /* On smaller screens, decrease text size */
@@ -526,24 +571,51 @@ border-radius:20px;
   .products h1{
     font-size: 33px;
   }
-  
-  .slideshow-container{
-    padding:10px;
-    
-  }
+
   .imgp1,.imgp2,.imgp3,.imgp4,.imgp5{
-    padding:150px;
+    padding:100px;
     width: 100%;
     height: 100%;
   }
-  .products{
-    padding:30px;
+  .slideshow-container {
+    padding:39px;
   }
-  .abimg{
-    margin-top: 10px;
-    padding:5px;
-    height: auto;
-    
+  
+.products {
+  z-index: 2;
+  background-color: #fafafa ;
+  align-items: center;
+  text-align: center;
+  padding: 10px;
+  padding-left: 10px;
+  padding-right: 10px;
+  border-radius: 10px;
+  
+  
+}
+
+.abimg{
+  padding:10px;
+  margin-top: 20px;
+  color:rgb(8, 1, 1);
+  font-size: 30px ;
+  font: "Montserrat";
+  display: table-cell;
+  vertical-align: middle;
+  
+}
+.products h1 {
+  font-family: adobe-Garamond-pro;
+  z-index: 2;
+  font-size: 33px;
+    top: 10%; 
+    left: 50%;
+    text-transform: uppercase;
+    font-family: verdana;
+    color:rgb(27, 23, 23);
+}
+.con{
+  padding:10px;
 }
 .abimg p{
   margin-top: 10px;
@@ -553,35 +625,30 @@ border-radius:20px;
 .images {
   padding-top: 10px;
 }
-@-webkit-keyframes fadeInRight{
-  0%{
-      opacity:0;
-      -webkit-transform:translateX(0px);
-      transform:translateX(0px)
+@keyframes slide {
+  0% {
+    background-position: 0 0;
   }
-  100%{
-      opacity:1;
-      -webkit-transform:translateX(0);
-      transform:translateX(0)
+  16.66% {
+    background-position: 0 0;
   }
-}
-@keyframes fadeInRight{
-  0%{
-      opacity:0;
-      -webkit-transform:translateX(0px);
-      -ms-transform:translateX(0px);
-      transform:translateX(0px)
+  33.32% {
+    background-position: -800px 0;
   }
-  100%{
-      opacity:1;
-      -webkit-transform:translateX(0px);
-      -ms-transform:translateX(0px);
-      transform:translateX(0px)
+  49.98% {
+    background-position: -800px 0;
+  }
+  66.64% {
+    background-position: -1600px 0;
+  }
+  83.30% {
+    background-position: -1600px 0;
+  }
+  100% {
+    background-position: 0 0;
   }
 }
-.slideshow-container {
-  padding:10px;
-}.bg{
+.bg{
 object-fit: contain;
 position: relative;
 
@@ -592,7 +659,7 @@ position: relative;
 .text a {
   display: inline-block;
   font-size: 1rem;
-  background-color: rgb(199, 164, 164);
+  background-color: rgb(155, 155, 155);
   padding: 10px;
   text-decoration: none;
   margin-top: 10px;
@@ -649,7 +716,9 @@ position: relative;
   display: block;
 }
 .slideshow-container{
-  height: 50%;
+  height: 65%;
+  padding-left: 5px;
+  padding-right: 5px;
 }
 .map h2{
   font-size:23px ;
@@ -661,11 +730,7 @@ position: relative;
 .mat h2{
   font-size: 1rem;;
 }
-.mySlides h1{
-  font-size: 22px;
-  top: 10%;
-  left: 10%;
-}
+
 .gif{
   width: 100%;
   height: 50%;
@@ -681,5 +746,36 @@ position: relative;
   padding-right: 100px;
   background-position:10%;
 
+}
+.w3-btn, .w3-button {
+  border: none;
+  display: inline-block;
+  padding: 7px;
+  margin-top: 5px;
+  
+  overflow: hidden;
+  text-decoration: none;
+  color: inherit;
+  background-color: inherit;
+  text-align: center;
+  cursor: pointer;
+  white-space: nowrap;
+  border-radius: 11px;
+  z-index: 5;
+  
+}
+#l1{
+  margin-left: 45%;
+}
+#l2{
+  margin-left: 5px;
+}
+.text1 a {
+  margin-left: 30%;
+  font-size: 1em;
+}
+.imgp1 h1,.imgp2 h1,.imgp3 h1,.imgp4 h1,.imgp5 h1{
+  margin-top: 3em;
+  font-size: 30px;
 }
 }
