--- a/home.css
+++ b/home.css
@@ -411,7 +411,7 @@ box-shadow: 0px 0px 12px 3px rgb(12, 12, 12);
   z-index: 3;
   top: 80%;
   left: 10%;
-  color:white;
+  color:#FF0000;
   font-family:"HELVETICA";
   font-size:60px;
   margin-top: 1em;
