--- a/home.css
+++ b/home.css
@@ -409,16 +409,16 @@ box-shadow: 0px 0px 12px 3px rgb(12, 12, 12);
 }
 .imgp5 h1,.imgp4 h1,.imgp3 h1,.imgp2 h1,.imgp1 h1{
   z-index: 3;
-  top: 80%;
+  top: 70%;
   left: 10%;
-  color:#FF0000;
+  color:#282828;
   font-family:"HELVETICA";
   font-size:60px;
   margin-top: 1em;
 }
 .imgp5 h1{
-  margin-top: 2em;
-  margin-left: 1.5em;
+  margin-top: 1em;
+  margin-left: 1em;
 }
 
 
