--- a/home.css
+++ b/home.css
@@ -411,14 +411,14 @@ box-shadow: 0px 0px 12px 3px rgb(12, 12, 12);
   z-index: 3;
   top: 70%;
   left: 10%;
-  color:#282828;
+  color:White;
   font-family:"HELVETICA";
   font-size:60px;
   margin-top: 1em;
 }
 .imgp5 h1{
   margin-top: 1em;
-  margin-left: 1em;
+  margin-left: 2.6em;
 }
 
 
