--- a/home.css
+++ b/home.css
@@ -413,12 +413,9 @@ box-shadow: 0px 0px 12px 3px rgb(12, 12, 12);
   left: 10%;
   color:White;
   font-family:"HELVETICA";
-  font-size:60px;
+  font-size:50px;
   margin-top: 1em;
-}
-.imgp5 h1{
-  margin-top: 1em;
-  margin-left: 2.6em;
+  margin-left: 55%;
 }
 
 
