--- a/home.css
+++ b/home.css
@@ -772,7 +772,6 @@ position: relative;
   font-size: 1em;
 }
 .imgp1 h1,.imgp2 h1,.imgp3 h1,.imgp4 h1,.imgp5 h1{
-  margin-top: 3em;
-  font-size: 30px;
+  margin-left: 40%;
 }
 }
