--- a/home.css
+++ b/home.css
@@ -417,7 +417,7 @@ box-shadow: 0px 0px 12px 3px rgb(12, 12, 12);
   margin-top: 1em;
   margin-left: 50%;
 }
-.imgp2 h1,.imgp1 h1{
+.imgp1 h1{
   z-index: 3;
   top: 70%;
   left: 10%;
@@ -426,6 +426,16 @@ box-shadow: 0px 0px 12px 3px rgb(12, 12, 12);
   font-size:50px;
   margin-top: 1em;
   margin-left: 25%;
+}
+.imgp2 h1{
+   z-index: 3;
+  top: 70%;
+  left: 10%;
+  color:White;
+  font-family:"HELVETICA";
+  font-size:50px;
+  margin-top: 1em;
+  margin-left: 40%;
 }
 
 
