--- a/home.css
+++ b/home.css
@@ -224,8 +224,8 @@
 .products h1 {
   z-index: 2;
   font-size: 56px;
-    top: 15%; 
-    left: 55%;
+  margin-top:10px;
+  margin-left:20px;
     padding: 25px;
     text-transform: uppercase;
     color:rgb(34, 27, 27);
