--- a/home.css
+++ b/home.css
@@ -453,7 +453,7 @@ button, [type=button], [type=reset], [type=submit] {
   position: absolute;
   z-index: 3;
   font-family:"adobe-gothic-std";
-  color: #cac1b4;
+  color: #454444 ;
   font-size:40px;
   margin-right: 60%;
   font-style: normal;
