--- a/home.css
+++ b/home.css
@@ -243,7 +243,7 @@
     padding: 15px;
     padding-top: 35px;
     text-transform: uppercase;
-    color:rgb(34, 27, 27);
+    color: #454444 ;
     font-family:"adobe-gothic-std";
     font-style: normal;
 }
