--- a/home.css
+++ b/home.css
@@ -11,10 +11,12 @@
   font-family: "Titillium Web",'Montserrat',"adobe-gothic-std", sans-serif;
   scroll-behavior: smooth;
 }
-@font-face {
-  font-family: 'Comaro Normal';
-  src: url('http://www.fontsaddict.com/fontface/comaro-normal.ttf');
-}
+@font-face {font-family: "Comaro"; src: url("//db.onlinewebfonts.com/t/01f05dd1309b82a69713198ffdd2b336.eot");
+ src: url("//db.onlinewebfonts.com/t/01f05dd1309b82a69713198ffdd2b336.eot?#iefix") format("embedded-opentype"),
+  url("//db.onlinewebfonts.com/t/01f05dd1309b82a69713198ffdd2b336.woff2") format("woff2"), 
+   url("//db.onlinewebfonts.com/t/01f05dd1309b82a69713198ffdd2b336.woff") format("woff"), 
+   url("//db.onlinewebfonts.com/t/01f05dd1309b82a69713198ffdd2b336.ttf") format("truetype"),
+  url("//db.onlinewebfonts.com/t/01f05dd1309b82a69713198ffdd2b336.svg#Comaro") format("svg"); }
 .spinner-wrapper{
   width: 100%;
   height: 100%;
@@ -112,7 +114,7 @@
   align-items: center;
 }
 .text h1{
-  font-family: 'Comaro Normal',sans-serif;
+  font-family: 'Comaro';
 }
 
 .showcase header {
@@ -123,7 +125,6 @@
   padding: 30px;
   z-index: 1;
   font-size: 1.8rem;
-  
 font-style: normal;                                        
   color: #cac1b4;
 }
