--- a/home.css
+++ b/home.css
@@ -121,6 +121,7 @@
   width: 100%;
   padding: 30px;
   z-index: 1;
+  font-family: "Comaro";
   font-size: 1.8rem;
 font-style: normal;                                        
   color: #cac1b4;
