--- a/home.css
+++ b/home.css
@@ -1,7 +1,7 @@
 /*! FONTS */
 @import url("https://fonts.googleapis.com/css2?family=Titillium+Web:wght@400;700&display=swap");
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital@1&display=swap');
-@import url('http://fonts.cdnfonts.com/css/camaro');
+
 
 
 /* ! */
@@ -108,6 +108,15 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+}
+@font-face {
+  font-family: "Comaro"; 
+  src: url("//db.onlinewebfonts.com/t/3ba6e995d900d9094f9ffdbcd59eb709.eot"); 
+  src: url("//db.onlinewebfonts.com/t/3ba6e995d900d9094f9ffdbcd59eb709.eot?#iefix") format("embedded-opentype"),
+  url("//db.onlinewebfonts.com/t/3ba6e995d900d9094f9ffdbcd59eb709.woff2") format("woff2"), 
+  url("//db.onlinewebfonts.com/t/3ba6e995d900d9094f9ffdbcd59eb709.woff") format("woff"),
+  url("//db.onlinewebfonts.com/t/3ba6e995d900d9094f9ffdbcd59eb709.ttf") format("truetype"),
+  url("//db.onlinewebfonts.com/t/3ba6e995d900d9094f9ffdbcd59eb709.svg#Comaro") format("svg"); 
 }
 .header h1{
 font-family: 'Camaro', sans-serif;
