--- a/home.css
+++ b/home.css
@@ -119,7 +119,7 @@
   url("//db.onlinewebfonts.com/t/3ba6e995d900d9094f9ffdbcd59eb709.svg#Comaro") format("svg"); 
 }
 .header h1{
-font-family: 'Camaro', sans-serif;
+font-family: 'Comaro', sans-serif;
 }
 
 .showcase header {
